# snip_with_ocr_your_own

./: README.md  requirements.txt  snip.py  snip.spec  snip_onnx.py  snip_onnx.spec
easyocr_only_onnx/: only_onnx_test.py  pyproject.toml
easyocr_only_onnx/easyocr/: detection.py  easyocr.py  recognition.py  utils.py
onnx_models/: place detection and recognition model here.txt
